@@ -2,6 +2,7 @@
     active-field: bisque;
     field-error: lightpink;
     panel-background: ivory;
+    required-field: red;
     selected-value: bisque;
     shadow: gray;
     text: black;
@@ -17,6 +18,7 @@
 form.classic {
     background: #colours[panel-background]; border-radius: 5px;
     box-shadow: 3px 3px 3px; color: #colours[shadow]; display: inline-block;
+    margin: 0 1rem;
     div, legend {
         color: #colours[text];
     }
@@ -25,6 +27,10 @@ form.classic {
     }
     label {
         font-size: 0.8rem; line-height: 1em;
+    }
+    label:has(+ input[required=required])::after {
+        color: #colours[required-field]; content: '*'; display: inline-block;
+        padding-left: 0.25rem;
     }
     .alert-info {
         font-size: 0.8rem; padding: 0.5rem 0 0;
@@ -88,9 +94,6 @@ form.classic {
             }
         }
     }
-    .input-field.hide {
-        display: none;
-    }
     .input-captcha input,
     .input-captcha .field-label,
     .input-display .field-label,
@@ -130,9 +133,18 @@ form.classic {
     }
     .input-button {
         display: flex; justify-content: right;
-        input {
+        button, input {
             margin: 0.5rem 0;
         }
+    }
+    .input-button.inline {
+        display: inline-flex;
+    }
+    .input-button.inline.right {
+        float: right; margin-left: 0.5rem;
+    }
+    .input-field.hide {
+        display: none;
     }
     .label-right {
         text-align: right;
